# ogham-chat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  api.py  chat_tui.py  main.py  pyproject.toml
Formula/: ogham.rb
assets/style/: __init__.py  chat.tcss
backend/: __init__.py  local_backend.py  maintenance.py  models.py  relay_backend.py
backend/core/: config.py  message.py  username.py
backend/realtime/: __init__.py  redis_bus.py
backend/routes/: health.py  messages.py  ws.py
backend/static/: landing.html
backend/store/: base.py  memory.py  sql.py
backend/transport/: local.py  relay.py  relay_history.py
backend/types/: __init__.py  message.py
backend/ws/: manager.py
components/: chat_log.py  composer.py
frontend/: chat_tui.py  cli.py  commands.py  contact_groups.py  local_prefs.py
frontend/assets/style/: __init__.py  chat.tcss  theme.py
frontend/components/: account_switcher_dialog.py  autocomplete.py  chat_log.py  composer.py  contact_list.py  onboarding_dialog.py  splash_screen.py  status_footer.py
frontend/identity/: __init__.py  manager.py  store.py
frontend/runtime/: __init__.py  session.py
ops/supabase/: purge_expired_chat_messages.sql
