[project]
name = "ogham-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "psycopg[binary]>=3.2.9",
    "sqlmodel>=0.0.24",
    "textual>=8.2.3",
]

[tool.uv.workspace]
members = [
    "ogham-chat",
    "ogham",
]

[tool.fastapi]
entrypoint = "api:app"
