[project]
name = "ogham-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "psycopg[binary]>=3.2.9",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "textual>=8.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.uv.workspace]
members = [
    "ogham-chat",
    "ogham",
]

[tool.fastapi]
entrypoint = "api:app"

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["D"]
ignore = [
    "D100", # module docstring (not enforced for this repo)
    "D104", # package docstring (not enforced for __init__.py)
    "D105", # magic method docstring
    "D107", # __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"
