[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ogham-chat"
version = "0.1.0b2"
description = "Minimal in-terminal chat app built with Textual"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "psycopg>=3.2.9",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "textual>=8.2.3",
]

[project.scripts]
ogham = "frontend.chat_tui:main"

[project.urls]
Homepage = "https://github.com/JRiggles/ogham-chat"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.fastapi]
entrypoint = "api:app"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["D"]
ignore = [
    "D100", # module docstring (not enforced for this repo)
    "D104", # package docstring (not enforced for __init__.py)
    "D105", # magic method docstring
    "D107", # __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "ogham-chat",
    "ogham",
]

[tool.hatch.build.targets.wheel]
packages = [
    "backend",
    "frontend",
]
